<resources>
    <string name="app_name">proCalc</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="youNeedGingerBread">You need Gingerbread (17) or later to use this app</string>
    <string name="title_activity_edit_btn">Button Edit</string>
    <string name="buttonText">Button Text: </string>
    <string name="active">Active</string>
    <string name="showText">Show Text</string>
    <string name="locked">Locked</string>
    <string name="rowRelHeight">Row Height:</string>
    <string name="buttonRelWidth">Width:</string>
    <string name="codeForThisButton">Main code for this button:</string>
    <string name="instrForThisButton">Instructions / description for this button:</string>
    <string name="onEqual">onEqual (=) code:</string>

    <string name="save">Save</string>
    <string name="exit">Exit</string>
    <string name="title_activity_code_editor">CodeEditorActivity</string>
    <string name="title_activity_color_pkr">ColorPkrActivity</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="title_activity_msg_box">MsgBoxActivity</string>
    <string name="title_activity_input_box">InputBox</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about">About</string>
</resources>
