<!--
  ~ Copyright (c) 2015. Fernando Toro. All rights reserved
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ftpha.programmablecalculator.EditBtnActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/chBxActive"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/active"
            android:checked="false"
            android:onClick="onActiveStatusSet"/>
        <CheckBox
            android:id="@+id/chBxShowText"
            android:layout_width="0dp"
            android:layout_weight="1.1"
            android:layout_height="wrap_content"
            android:text="@string/showText"
            android:checked="false"
            android:onClick="onShowTextStatusSet"/>

        <CheckBox
            android:id="@+id/chBxLocked"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/locked"
            android:onClick="onLockedStatusSet"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:text="@string/buttonText"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="14"
            android:layout_height="wrap_content"
            android:id="@+id/txtBttnText"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            >
            <LinearLayout
                android:id="@+id/llButtonColor"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:orientation="horizontal"
                android:background="#ff378237"
                android:layout_gravity="bottom"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:onClick="onButtonColClicked"
                >
                <!--Aqui arriba el background-->
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llTextColorBG"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:orientation="horizontal"
                android:background="#ff378237"
                android:layout_gravity="bottom"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:onClick="onTextColClicked" >
                <!--Aqui arriba el background-->
                <TextView
                    android:id="@+id/llTextColorTxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="A"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:textColor="#ffe9d8e9"/>
                <!--Aqui arriba el background-->
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rowRelHeight"
                />
            <EditText
                android:id="@+id/txtRowH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:layout_weight="1"
                android:text="1"
                android:gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonRelWidth"
                />

            <EditText
                android:id="@+id/txtBtnW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:layout_weight="1"
                android:text="1"
                android:gravity="center_horizontal"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="100">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="100"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/codeForThisButton"/>
                    <EditText
                        android:id="@+id/txtButtonCode"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="top"
                        android:background="#fffdfe"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="7"
                    android:layout_height="match_parent"
                    >
                    <LinearLayout
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="3dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text=" ..."
                            android:background="#cccccc"
                            android:onClick="onGoToBttnsCode"
                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout> <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="100"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instrForThisButton"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:background="#fffdfe"
                    android:id="@+id/txtButtonDescription"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="7"
                android:layout_height="match_parent"
                android:onClick="onGoToBttnsDescription">
                <LinearLayout
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="3dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text=" ..."
                        android:background="#cccccc"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:orientation="horizontal"
            android:gravity="right"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/save"
                android:onClick="onSaveBttn"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/exit"
                android:onClick="onExitWOSave"
                />
        </LinearLayout>



    </LinearLayout>


</LinearLayout>
